bugs fixed (me voy a dormir ya que mañana madrugo)